# gh-actions-demo

./: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-hf-space.yml  deploy-to-hf.yml
.github/workflows/scripts/: create_space.py  upload_file.py
docs/: gradio-hf-deploy-doc.md
documentations/: github-actions-guide.md  gradio-hf-deploy-doc.md
scripts/: deploy.py
src/: app.py  text_utils.py
tests/: test_app.py
